[package]
name = "fast-map"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-map-derive = { path = "fast-map-derive" }

[build-dependencies]
quote = "1.0.2"
