[package]
name = "fast-map-derive"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
proc-macro2 = "1.0.4"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "1"

[lib]
proc-macro = true