[package]
name = "fast-map-derive"
version = "0.2.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
readme = "../README.md"
license = "MIT"
description = "Maplike using match"
repository = "https://github.com/kardeiz/fast-map"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
proc-macro2 = "1.0.4"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "1"

[lib]
proc-macro = true